Fix compose form buttons spacing for Urusai, to accomodate for the added reaction button

--- a/app/javascript/flavours/glitch/styles/modern-urusai-fixes.css
+++ b/app/javascript/flavours/glitch/styles/modern-urusai-fixes.css
@@ -24,3 +24,17 @@ body.app-body.flavour-glitch > #mastodon .notification__message > span,
 .status.collapsed .status__content .video-player {
   display: none;
 }
+
+#mastodon
+  .compose-form
+  .compose-form__highlightable
+  .compose-form__submit
+  button,
+#mastodon
+  .compose-form
+  .compose-form__highlightable
+  > .compose-form__footer
+  .compose-form__buttons
+  button {
+  padding: 3px;
+}
